# eecs467-final-project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_pico_firmwares.sh  mbot.c  package.xml  requirements.txt  setup.py
action/: FollowPath.action
config/: rviz.rviz
launch/: game.launch  mbot.launch  simulator.launch
msg/: BallControl.msg  GameState.msg
puncher-controller-pico/comms/include/comms/: messages_mb.h  protocol.h
puncher-controller-pico/comms/src/: messages_mb.c  protocol.c  topic_data.c
puncher-controller-pico/rc/include/rc/motor/: motor.h
puncher-controller-pico/src/: mbot.h
puncher-controller-pico/tests/: pico_motor_analyze.c  test_dmp.c
src/: ball_detector.py  bot_detector.py  diff_drive.py  drive_pico.cpp  game.py  motion_planner.py  mppi.cpp  pico_bridge.py  player.py  simulator.py  teleop.py  transforms.py  usb_camera.cpp  usb_camera.py  zed.cpp
src/mbot/: CMakeLists.txt
src/mbot/comms/include/comms/: common.h  messages.h  topic_data.h
src/mbot/drive/: drive.cpp
src/mbot/rc/include/rc/defs/: mbot_omni_defs.h
src/mbot/rc/include/rc/motor/: motor.h
src/mbot/src/: mbot.c  mbot.h
src/pico-ball-controller/: CMakeLists.txt  README.md
src/pico-ball-controller/rc/include/rc/defs/: mbot_diff_defs.h
src/pico-ball-controller/rc/src/motor/: motor.c
src/pico-ball-controller/src/: CMakeLists.txt  mbot.c  mbot.h
src/pico-drive-controller/: .gitignore  CMakeLists.txt
src/pico-drive-controller/comms/: CMakeLists.txt
src/pico-drive-controller/comms/include/comms/: messages.h  messages_mb.h
src/pico-drive-controller/rc/: CMakeLists.txt
src/pico-drive-controller/rc/include/rc/defs/: common_defs.h
src/pico-drive-controller/rc/src/defs/: mbot_defs.c
src/pico-drive-controller/src/: mbot.c  mbot.h
urdf/: aruco.blend  aruco_0.mtl  aruco_1.mtl  ball.urdf  field.blend  field.mtl  field.urdf  mbot.urdf  mbot_0.urdf  mbot_2.urdf
